--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.12.4",
     "express-session": "^1.11.3",
+    "jquery-shadow-animation": "^1.10.0",
     "mongoose": "^4.1.0",
     "nodemon": "^1.14.11",
     "passport": "^0.3.0",
